--- a/cards PS.html
+++ b/cards PS.html
@@ -3963,7 +3963,8 @@ function changeTextColor(color) {
                              .replace(/\*/g, "")
                              .replace(/<[^>]*>/g, "")
                              .replace(/&nbsp;/g, " ");
-        
+        // --- FILTRO ANTI-EMOJI (Remove carinhas e símbolos gráficos para leitura) ---
+        cleanText = cleanText.replace(/[\u{1F300}-\u{1F9FF}]|[\u{2700}-\u{27BF}]|[\u{2600}-\u{26FF}]|[\u{1F1E0}-\u{1F1FF}]/gu, "");
         // APLICA A CORREÇÃO FONÉTICA (Dicionário)
         let textToRead = applyPhoneticCorrections(cleanText);
 
