--- a/cds PS.html
+++ b/cds PS.html
@@ -1958,11 +1958,11 @@ body {
       <form id="loginForm" class="login-form">
         <div class="form-group">
           <label for="loginEmail">Email:</label>
-          <input type="email" id="loginEmail" value="@teste" readonly style="background-color: #333; color: #aaa; cursor: not-allowed;">
+         <input type="email" id="loginEmail" value="@teste" readonly style="background-color: #333; color: #aaa; cursor: not-allowed;">
         </div>
         <div class="form-group">
           <label for="loginPassword">Senha:</label>
-           <input type="password" id="loginPassword" value="10" readonly style="background-color: #333; color: #aaa; cursor: not-allowed;">
+                   <input type="password" id="loginPassword" value="10" readonly style="background-color: #333; color: #aaa; cursor: not-allowed;">
         </div>
         <button type="submit" class="login-button" id="loginSubmitBtn">
           <span id="loginBtnText">Acessar</span>
@@ -4144,7 +4144,10 @@ function changeTextColor(color) {
         "X": "dez",
         "L": "cinquenta",
         "C": "cem",
-        "I": "um" // Cuidado: No contexto de Flashcards, I maiúsculo isolado geralmente é numeral.
+        "I": "um", // Cuidado: No contexto de Flashcards, I maiúsculo isolado geralmente é numeral.
+		
+		// === 8. SIGLAS ===
+		"CEDM": "C-E-D-M",
     };
 
     function applyPhoneticCorrections(text) {
@@ -4168,7 +4171,7 @@ function changeTextColor(color) {
             if (/^[a-zA-Z0-9À-ÿ]+$/.test(original)) {
                 // Se for palavra limpa, usamos SEGURANÇA (\b) para não substituir o meio de outras palavras
                 // Ex: Evita que "MP" substitua "caMPo"
-                regex = new RegExp(`\\b${safeOriginal}\\b`, "gi");
+                regex = new RegExp(`(?<![a-zA-Z0-9À-ÿ\\-])${safeOriginal}(?![a-zA-Z0-9À-ÿ\\-])`, "gi");
             } else {
                 // Se tiver ponto, barra ou espaço (Ex: art., CF/88, 11 RPM), ativamos o MODO AGRESSIVO.
                 // Removemos a fronteira (\b) porque o ponto muitas vezes já é a fronteira.
